feat: generate .gitignore in scaffold